Fixed minor changes in first draft from steffes, Need to rewrite 3.4 and 5

--- a/Bellotti-Masters-thesis.tex
+++ b/Bellotti-Masters-thesis.tex
@@ -111,7 +111,7 @@ would have graduated so, so, very much faster.
 \include{./rtm/rtm}
 \include{./summary/summary}
 
-\nocite{*}
+%\nocite{*}
 %% We need this since this file doesn't ACTUALLY \cite anything...
 %%
 \appendix
