--- a/model/results.tex
+++ b/model/results.tex
@@ -1,6 +1,6 @@
 \clearpage
 \section{Experimental Results}
-High accuracy laboratory measurements of the temperature and pressure dependence of the millimeter-wavelength absorption of gaseous SO$_2$ in a CO$_2$ atmospheres have been conducted at 308 and 345 K at pressures from 30 mbar to 3 bars for wavelengths between 2-4 milimeters. The following plot show the results of these absorptivity measurements with the two sigma uncertainties. For comparison purposes these tables also show two known formalisms of SO$_2$'s absorptivity. One developed by Suleiman et al. 1997 \cite{Suleiman-thesis} and the second by Fahd and Steffes \cite{Fahd-thesis}. 
+High accuracy laboratory measurements of the temperature and pressure dependence of the millimeter-wavelength absorption of gaseous SO$_2$ in a CO$_2$ atmospheres have been conducted at 308 and 345 K at pressures from 30 mbar to 3 bars for wavelengths between 2-4 milimeters. The following plots show the results of these absorptivity measurements with the accompanying two-sigma uncertainties. For comparison purposes these plots also show two known formalisms of SO$_2$'s absorptivity. One developed by Suleiman et al. 1997 \cite{Suleiman-thesis} and the second by Fahd and Steffes \cite{Fahd-thesis} using the new JPL line catalog. 
 
 \subsection{Accuracy of Constituents}
 Originally when the data was taken, the results fit the lineshapes of these two model's but the absorption calculated was much lower then predicted. After careful considerations of what could have caused this the SO$_2$ bottle was shipped back to Airgas\texttrademark for analysis. It was concluded that the SO$_2$ bottle used was comprised of 84.7\% SO$_2$ and 15.3\% N$_2$. Luckily N$_2$ has little to no absorptivity in the millimeter-wavelength domain so it is safely ignored.
