--- a/rtm/beam-forming.tex
+++ b/rtm/beam-forming.tex
@@ -1,6 +1,6 @@
 \section{Beam Forming}
 
-Since the ray-tracing algorithm assumes a pencil beam (or ray) it is necessary to form spatial samples of the main beam in order to estimate properly emergent flux of the atmosphere incident on the antenna. This is accomplished by generating a set of vectors that each describe a ray that is offset from the direction of the boresight ray. The boresight may take on any direction. Since the developed RTM is used for earth based observations the problem of mapping an antenna to the planet gets simplified quite a bit. The parameters of this beam forming algorithm are $R_{proj}$, $BWHM$, $N_c$, and $n_0$. $R_{proj}$ is the projected radius of the antenna beam pattern onto a planar projection of Venus (in km). This can be thought of as a pixel resolution (1 pixel = 200x200 km). The second parameter is the $3dB$ beamwidth of the antenna's main beam. $N_c$ is the number of concentric rings while $n_0$ is the number of samples in the initial ring. Once the free samples are chosen the number of beamsamples in each ring may be found by
+Since the ray-tracing algorithm assumes a pencil beam (or ray) it is necessary to form spatial samples of the main beam in order to properly estimate the emergent flux of the atmosphere incident on the antenna. This is accomplished by generating a set of vectors that each describe a ray that is offset from the direction of the boresight ray. Since the developed RTM is used for earth based observations the problem of mapping an antenna to the planet gets simplified quite a bit. The parameters of this beam forming algorithm are $R_{proj}$, $BWHM$, $N_c$, and $n_0$. $R_{proj}$ is the projected radius of the antenna beam pattern onto a planar projection of Venus (in km). This can be thought of as a pixel resolution (1 pixel = 200x200 km). The second parameter is the $3dB$ beamwidth of the antenna's main beam. $N_c$ is the number of concentric rings while $n_0$ is the number of samples in the initial ring. Once the free samples are chosen the number of beamsamples in each ring may be found by
 \begin{equation}
 N(k) = N(1) \times (2k-1)
 \end{equation}
