--- a/rtm/results.tex
+++ b/rtm/results.tex
@@ -1,5 +1,5 @@
 \section{Radiative Transfer Results}
-To validate the developed RTM it was compared to various disk-averaged brightness measurements taken of Venus. Table \ref{tab:rtm-results} shows results for measurements of the microwave and millimeter-wave disk-averaged brightness temperatures of Venus. For comparison purposes the table also shows the computed disk-averaged brightness temperatures ($T_D$) for Venus using the developed RTM. 
+To validate the developed RTM, results from disk-averaged computations were compared to various disk-averaged brightness measurements taken of Venus. Table \ref{tab:rtm-results} shows results for measurements of the microwave and millimeter-wave disk-averaged brightness temperatures of Venus. For comparison purposes the table also shows the computed disk-averaged brightness temperatures ($T_D$) for Venus using the developed RTM. 
 
 For the lower frequencies our computed $T_D$ is much higher then the measured values. This is due to the understatement of the H$_2$SO$_4$ abundance profile. Since H$_2$SO$_4$'s profile varies widely by latitude and longitude using a different profile will make this difference much smaller. 
 
@@ -10,7 +10,7 @@ Figure \ref{fig:weight} shows the weighting function of various frequencies. Cha
 \begin{tabular}{||c|c|c|c|c||}
 \hline
 Frequency & Wavelength & Measured $T_D$ & Computed $T_D$ & Reference\\
-(GHz) & (cm) &(K)&(K)& \\
+(GHz) & (cm) &(K)&(K)& of Measurements\\
 \hline
 1.385 	& 21.66	 	&$612.8 \pm 12.3$	&642.6  &Butler et al., 2001 			\cite{Butler-2001}\\
 1.42 	& 21.12 	&$617 	\pm 25$		&642.7  &Berge et al., 1972 			\cite{Berge-1972}\\
