--- a/bibliography.bib
+++ b/bibliography.bib
@@ -105,6 +105,19 @@ pages = {14881--14892},
 year = {1988},
 }
 
+﻿@article {Pettengill-1992,
+author = {Pettengill, Gordon H. and Ford, Peter G. and Wilt, Robert J.},
+title = {Venus surface radiothermal emission as observed by Magellan},
+journal = {Journal of Geophysical Research: Planets},
+volume = {97},
+number = {E8},
+issn = {2156-2202},
+url = {http://dx.doi.org/10.1029/92JE01356},
+doi = {10.1029/92JE01356},
+pages = {13091--13102},
+year = {1992},
+}
+
 @article{Steffes-1990,
 title = "Observations of the microwave emission of Venus from 1.3 to 3.6 cm ",
 journal = "Icarus ",
@@ -307,6 +320,22 @@ doi = "http://dx.doi.org/10.1006/icar.1997.5887",
 url = "http://www.sciencedirect.com/science/article/pii/S0019103597958875",
 author = "Marc A. Kolodner and Paul G. Steffes"
 }
+
+@article{Lipa-1979,
+title = "Statistical and computational uncertainties in atmospheric profiles from radio occultation: Mariner 10 at Venus ",
+journal = "Icarus ",
+volume = "39",
+number = "2",
+pages = "192 - 208",
+year = "1979",
+note = "",
+issn = "0019-1035",
+doi = "http://dx.doi.org/10.1016/0019-1035(79)90163-5",
+url = "http://www.sciencedirect.com/science/article/pii/0019103579901635",
+author = "Belinda Lipa and G. Leonard Tyler"
+}
+
+
 
 @misc{Devaraj-CARMA,
   author        = "Kiruthika Devaraj",
