--- a/intro/intro.tex
+++ b/intro/intro.tex
@@ -3,29 +3,29 @@
 %\section{Introduction}
 Active and passive microwave remote sensing techniques have been extensively used in the study of our sister planet, Venus. Unlike Earth's atmosphere, the Venus atmosphere is mostly comprised of gaseous carbon dioxide (CO$_2$). CO$_2$ comprises 96.5\% of the atmosphere along with gaseous nitrogen (N$_2$) at about 3.5\%. The Venus atmosphere has multiple trace constituents such as sulfur dioxide (SO$_2$), carbon monoxide (CO), water vapor (H$_2$O), carbonyl sulfide (OCS), and sufuric acid vapor (H$_2$SO$_4$) \cite{Suleiman-thesis}.
 
-Two sulfur-bearing compounds dominate the millimeter-wave emission from Venus: sulfur dioxide (SO$_2$) and gaseous sulfuric acid (H$_2$SO$_4$). At higher pressures H$_2$SO$_4$ thermally dissociates, forming H$_2$O and SO$_2$, both of which exhibit relatively small amounts of microwave absorption at the abundance levels present in the Venus atmosphere. Thus, in the deep atmosphere, only SO$_2$ and CO$_2$ have the potential to affect the observed microwave emission.
+Two sulfur-bearing compounds dominate the millimeter-wave emission from Venus: sulfur dioxide (SO$_2$) and gaseous sulfuric acid (H$_2$SO$_4$). At higher pressures H$_2$SO$_4$ thermally dissociates, forming H$_2$O and SO$_3$, both of which exhibit relatively small amounts of microwave absorption at the abundance levels present in the Venus atmosphere. Thus, in the deep atmosphere, only SO$_2$ and CO$_2$ have the potential to affect the observed microwave emission.
 
-Utilizing the millimeter-wavelength system at the Planetary Atmospheres Laboratory at Georgia Institute of Technology it is possible to simulate the upper troposphere of Venus and take precision measurements of the millimeter-wavelength properties of sulfur dioxide. Using the measurements, a model can be created that accurately predicts the opacity of sulfur dioxide in the Venus atmosphere. This model will make it possible to determine the source of variations in the Venus millimeter-wavelength emission, such as were observed by Sagawa \cite{Sagawa-2008}.
+Utilizing the millimeter-wavelength system at the Planetary Atmospheres Laboratory at Georgia Institute of Technology, it has been possible to simulate the upper troposphere of Venus and take precision measurements of the millimeter-wavelength properties of sulfur dioxide. Using the measurements, a model that accurately predicts the opacity of sulfur dioxide in the Venus atmosphere has been verified. Applying this opacity model to a newly developed radiative transfer model will make it possible to determine the source of variations in the Venus millimeter-wavelength emission, such as were observed by Sagawa \cite{Sagawa-2008}.
 
 \section{Background and Motivation}
 
-Radio absorptivity data fro planetary atmospheres can be used to infer abundances of microwave absorbing constituents. These are obtained from entry probe radio signal absorption measurements, spacecraft radio occultation experiments, and earth-based or spacecraft based radio emission observations. This can only be done if the microwave absorbing properties of potential constituents are available. The use of theoretically-derived microwave absorption properties for such atmospheric constituents, as well laboratory measurements taken under environmental conditions different then the atmosphere being studied often leads to significant misinterpretation of the measured opacity data. Even if laboratory measurements have been already conducted, improvements in the sensitivity of microwave sensors may require higher precision laboratory measurements. 
+Radio absorptivity data from planetary atmospheres can be used to infer abundances of microwave absorbing constituents. Such data is obtained from entry probe radio signal absorption measurements, spacecraft radio occultation experiments, and earth-based or spacecraft based radio emission observations. This can only be done if reliable models for the microwave absorbing properties of potential constituents are available. The use of theoretically-derived microwave absorption properties for such atmospheric constituents, or models based on laboratory measurements taken under environmental conditions different then the atmosphere being studied, often leads to significant misinterpretation of the measured opacity data. Even if laboratory measurements have been already conducted, improvements in the sensitivity of microwave sensors may require higher precision laboratory measurements. 
 
-Using the measured absorption spectra and the proposed formalism a radiative transfer model was produced. The model can be applied to earth-based, spacecraft-based, radio occultation experiments, and entry probe radio signal absorption measurements to provide planetary maps of SO$_2$ abundances at all altitudes of the Venus atmosphere. %Using this model along with observations from Sagawa \cite{observations} it will be possible to identify vertical abundances of SO$_2$ in different places of the Venus atmosphere. 
-This model can be applied to earth based millimeter-wavelength observations of Venus so as to provide planetary maps of sulfuric acid vapor and sulfur dioxide abundances at and immediately below the main cloud layer. Interpretation of such observations will complement the study of long-term variations of SO$_2$ variations at the 70 km altitude level. 
+Using the measured millimeter-wavelength absorption spectra of SO$_2$ in a CO$_2$ atmosphere and the resulting opacity formalism a radiative transfer model (RTM), has now been produced. The model can be applied to earth-based and spacecraft-based radio emission measurements so as to provide planetary maps of SO$_2$ abundances at all altitudes of the Venus atmosphere. %Using this model along with observations from Sagawa \cite{observations} it will be possible to identify vertical abundances of SO$_2$ in different places of the Venus atmosphere. 
+This model can be applied to earth based millimeter-wavelength observations of Venus so as to provide planetary maps of sulfuric acid vapor and sulfur dioxide abundances at and immediately below the main cloud layer. Interpretation of such observations will complement the study of long-term variations of SO$_2$ variations at the 70 km altitude level made with Venus-orbiting ultraviolet(uv) spectrometers. 
 
-It is well understood that the microwave emission spectrum of Venus reflects the abundance and distribution of its constituents. The most critical limiting factor in sensing these constituents is the knowledge of there microwave absorption properties under a Venus atmosphere. The millimeter-wavelength absorption spectra of SO$_2$ has been measured by Suleiman et al. (1997) \cite{Suleiman-thesis} and Fahd and Steffes (1992) \cite{Fahd-thesis}. These results had minimal frequencies measured along with high errors. Using newer technology it is possible to measure more resonances with higher precision. Improved laboratory capabilities will also allow for a wider range of environmental conditions, similar to those actually being probed, to be simulated. The millimeter-wavelength system used is able to reproduce conditions similar to those that will be experienced on Venus. The centimeter-wave absorption spectra already measured by Steffes et al. 2014 \cite{Steffes-2014} will be used to help choose a model that best represents the centimeter and millimeter wavelength opacity of SO$_2$ in a CO$_2$ atmosphere. 
+It is well understood that the microwave emission spectrum of Venus reflects the abundance and distribution of its constituents. The most critical limiting factor in sensing these constituents is the knowledge of there microwave absorption properties under a Venus atmosphere. The millimeter-wavelength absorption spectra of SO$_2$ has been measured by Fahd and Steffes, 1992 \cite{Fahd-thesis}.  Using newer technology it is possible to measure more resonances with higher precision. Improved laboratory capabilities also allow for a wider range of environmental conditions, similar to those actually being probed, to be simulated. The millimeter-wavelength system used is able to reproduce conditions similar to those that exist on Venus. The centimeter-wave absorption spectra already measured by Steffes et al. 2014 \cite{Steffes-2014} has been used to help choose a model that best represents the centimeter and millimeter wavelength opacity of SO$_2$ in a CO$_2$ atmosphere. 
 
-Sagawa (2008) attributes the Venus millimeter-wavelength continuum brightness variations to spatial variations in the abundances of both gaseous H$_2$SO$_4$ and SO$_2$ just below the cloud layer (48 km altitude). The developed RTM's weighting function confirms these results. Sagawa has also suggested that the effects of both constituents can be distinguished based on differences in frequency dependencies. However, to accomplish this high accuracy model's must be developed that characterize each the opacity of constituent and its frequency dependence. This thesis successfully characterizes SO$_2$'s absorption as a function of pressure, temperature, concentration, and frequency for both centimeter and millimeter-wavelengths. 
+Sagawa (2008) attributes the Venus millimeter-wavelength continuum brightness variations to spatial variations in the abundances of both gaseous H$_2$SO$_4$ and SO$_2$ just below the cloud layer (48 km altitude). The developed RTM's weighting function confirms these results. Sagawa has also suggested that the effects of both constituents can be distinguished based on differences in frequency dependencies of their millimeter-wavelength opacities. However, to accomplish this, high accuracy models must be developed that characterize the opacity of each constituent and its frequency dependence. This thesis successfully characterizes SO$_2$'s absorption as a function of pressure, temperature, concentration, and frequency for both centimeter and millimeter-wavelengths. 
 
 
 \section{Organization}
-The objective of this research is to determine the absorption properties of gaseous sulfur dioxide in a carbon dioxide atmosphere at millimeter wavelengths. The formalism identified from the results will then be used to create a radiative transfer model (RTM) for Venus. The thesis is organized as follows:
+The objective of this research has been to determine the absorption properties of gaseous sulfur dioxide in a carbon dioxide atmosphere at millimeter wavelengths. The formalism identified from the results has been used to create a radiative transfer model (RTM) for Venus. The thesis is organized as follows:
 \\ \\
-\noindent Chapter 2 provides a discussion of the theory behind measuring the opacity of a gas. A complete description of the measurement system used for this work is presented. A comparison of the data and known absorption models are also presented. 
+\noindent Chapter 2 provides a discussion of the theory behind measuring the millimeter-wavelength opacity of a gas. A complete description of the measurement system used for this work is presented.
 \\ \\
 \noindent Chapter 3 describes the measurement uncertainties involved with the experimental setups. An explanation of the data sets used and the analysis process are included. Finally a suggested model is presented.
 \\ \\
-\noindent Chapter 4 describes the radiative transfer model created from this work. A discussion on radiative transfer theory is presented followed by describing the necessary parameters. The correct formula for tracing a ray through different atmospheric layers as well as methods for speeding up the RTM follows. Later there is a discussion on how to use this RTM to simulate an antenna beam. Ending this chapter is the model's results based on other models and Venus observations.
+\noindent Chapter 4 describes the radiative transfer model created from this work. A discussion on radiative transfer theory is presented followed by describing the necessary parameters. The correct formula for tracing a ray through different atmospheric layers as well as methods for making the RTM computationally efficient follows. Later there is a discussion on how to integrate a simulated antenna beam pattern into this RTM to simulate an antenna beam. Ending this chapter is the model's results compared to Venus observations.
 \\ \\
 \noindent Chapter 5 summarizes the results of this work and presents suggestions for further investigations. An overview on this work's impact on Venus Observations is provided.
