--- a/Bellotti-Masters-thesis.tex
+++ b/Bellotti-Masters-thesis.tex
@@ -80,18 +80,20 @@
 \null\vfil
 {\large
 \begin{center}
-To myself,\\\vspace{12pt}
-Perry H. Disdainful,\\\vspace{12pt}
-the only person worthy of my company.
+To my parents,\\\vspace{12pt}
+Who were always putting education first.
 \end{center}}
 \vfil\null
 \end{dedication}
-\begin{preface}
-Theses have elements.  Isn't that nice?
-\end{preface}
+%\begin{preface}
+%Theses have elements.  Isn't that nice?
+%\end{preface}
 \begin{acknowledgements}
-I want to ``thank'' my committee, without whose ridiculous demands, I
-would have graduated so, so, very much faster.
+I would like to express my deepest gratitude to my adviser Professor Paul Steffes for his support and guidance throughout the course of this research. His consent wealth of knowledge, support, and patience helped me in completing this work. Although electromagnetism, and planetary remote sensing are not fields I would have seen myself working with during my undergraduate years. Dr. Steffes, eased me into it in a way I feel allowed me to grow and enjoy it. I would also like to thank my committee members Dr. Andrew R. Peterson and Dr. Morris Cohen for providing me with the time and effort in carefully reviewing my thesis work.
+
+The success of the laboratory experiments was made possible as a results of many contributions. I wish to thank Dr. Kirtuthika Devaraj for creating and automating the millimeter-wavelength measurement system and Dr. Thomas Hanley for the data processing code. Both of these were utilized in this research work. 
+
+The consent support and encouragement from my family has allowed me to pursue my goals throughout these years. I cannot thank them enough for pushing me to go to graduate school. 
 \end{acknowledgements}
 % print table of contents, figures and tables here.
 \contents
@@ -119,15 +121,15 @@ would have graduated so, so, very much faster.
 
 \begin{postliminary}
 \references
-\postfacesection{Index}{%
+%\postfacesection{Index}{%
 %%             ... generate an index here
 %%         look into gatech-thesis-index.sty
-}
-\begin{vita}
-Perry H. Disdainful was born in an insignificant town
-whose only claim to fame is that it produced such a fine
-specimen of a researcher.
-\end{vita}
+%}
+%\begin{vita}
+%Perry H. Disdainful was born in an insignificant town
+%whose only claim to fame is that it produced such a fine
+%specimen of a researcher.
+%\end{vita}
 \end{postliminary}
 
 \begin{abstract}
