--- a/bibliography.bib
+++ b/bibliography.bib
@@ -168,11 +168,11 @@ author = "Bryan J. Butler and Paul G. Steffes and Shady H. Suleiman and Marc A. 
 
 
 @article{Steffes-2014,
-title = "Laboratory Measurements of the 3.7-20 cm Wavelength Opacity of SUlfur Dioxide and Carbon Dioxide under Simulated Conditions for the Deep Atmosphere of Venus",
+title = "Laboratory Measurements of the 3.7-20 cm Wavelength Opacity of Sulfur Dioxide and Carbon Dioxide under Simulated Conditions for the Deep Atmosphere of Venus",
 journal = "Icarus ",
 year = "2014",
 note = "",
-author = "Paul G. Steffes and Patrick Shahan and Garret C. Barisich"
+author = "Paul G. Steffes and Patrick Shahan and Garret C. Barisich and Amadeo Bellotti"
 }
 
 @conference{Steffes-2012,
@@ -469,5 +469,12 @@ doi = {10.1029/2010RS004433},
 pages = {n/a--n/a},
 keywords = {millimeter wavelength, planetary atmospheres, gas opacity, quality factor, Fabry-Perot resonator},
 year = {2011}
+}
+
+@inproceedings{ALMA-2013,
+    author  = "Raphael Moreno and Arielle Moullet and Therese Encrenaz and Emmanuel Lellouch and Thierry Fouchet",
+    title   = "Submillimeter spectroscopy of Venus atmosphere with {ALMA}: {CO}, {HDO} and sulfur species",
+    publisher = "ASA Meeting",
+    year    = 2013
 }
 
