--- a/model/results.tex
+++ b/model/results.tex
@@ -3,15 +3,20 @@
 High accuracy laboratory measurements of the temperature and pressure dependence of the millimeter-wavelength absorption of gaseous SO$_2$ in a CO$_2$ atmospheres have been conducted at 308 and 345 K at pressures from 30 mbar to 3 bars for wavelengths between 2-4 milimeters. The following plots show the results of these absorptivity measurements with the accompanying two-sigma uncertainties. For comparison purposes these plots also show two known formalisms of SO$_2$'s absorptivity. One developed by Suleiman et al. 1997 \cite{Suleiman-thesis} and the second by Fahd and Steffes \cite{Fahd-thesis} using the new JPL line catalog. 
 
 \subsection{Accuracy of Constituents}
-Originally when the data was taken, the results fit the lineshapes of these two model's but the absorption calculated was much lower then predicted. After careful considerations of what could have caused this the SO$_2$ bottle was shipped back to Airgas\texttrademark for analysis. It was concluded that the SO$_2$ bottle used was comprised of 84.7\% SO$_2$ and 15.3\% N$_2$. Luckily N$_2$ has little to no absorptivity in the millimeter-wavelength domain so it is safely ignored.
 
-When this factor was then taken into account it became possible to compute both model's with the correct SO$_2$ mixing ratio. When this was done the data fit the model's lineshape and absorption. This is also the reason that the SO$_2$ mixing ratio and CO$_2$ mixing ratio do not add up to 100\%.
+It is necessary to ensure that the gasses used in each experiment is correctly characterized. Initially the bottle of SO$_2$ was assumed to consist of 100\% SO$_2$. The bottle was sent to Airgas$_\circledR$ for analysis. It was concluded that the SO$_2$ bottle used was comprised of 84.7\% SO$_2$ and 15.3\% N$_2$. Since N$_2$ has no absorptivity at centimeter and millimeter-wavelengths it can be safely ignored. This explains why the SO$_2$  and CO$_2$ mole fractions do not add up to 100\% in the following plots. 
 
-The CO$_2$ tank used was the same tank used in Steffes et al. 2014 \cite{Steffes-2014}. Since the CO$_2$ absorption measured in the paper matched the formalism and the refractive index of the gas matched that of CO$_2$ it is assumed that the tank is pure CO$_2$.
 
-\subsection{Cleaning of Data}
+%Originally when the data was taken, the results fit the lineshapes of these two model's but the absorption calculated was much lower then predicted. After careful considerations of what could have caused this the SO$_2$ bottle was shipped back to Airgas\texttrademark for analysis. It was concluded that the SO$_2$ bottle used was comprised of 84.7\% SO$_2$ and 15.3\% N$_2$. Luckily N$_2$ has little to no absorptivity in the millimeter-wavelength domain so it is safely ignored.
 
-The systems had a tenancy to lose resonate peaks when the temperature changed. This causes the variable data points in different plots. Data was also removed if it was not physically possible (negative or huge, $>1000$dB/km, opacity) and if the error bars were too large (encompassing 50 orders of magnitude). These were caused by the system either not finding the expected resonant peaks and/or (in the case of the F-Band system) interference due to outside sources. While both of these issues were minimized as much as possible they still occurred. 
+%When this factor was then taken into account it became possible to compute both model's with the correct SO$_2$ mixing ratio. When this was done the data fit the model's lineshape and absorption. This is also the reason that the SO$_2$ mixing ratio and CO$_2$ mixing ratio do not add up to 100\%.
+
+The CO$_2$ tank used was the same tank used in Steffes et al. \cite{Steffes-2014}. Since the CO$_2$ absorption measured in the paper matched the formalism and the refractive index of the gas matched that of CO$_2$ it is assumed that the tank is pure CO$_2$.
+
+%\subsection{Data}
+
+%The systems had a tenancy to lose resonate peaks when the temperature changed. This causes the variable data points in different plots. Data was also removed if it was not physically possible (negative or huge, $>1000$dB/km, opacity) and if the error bars were too large (encompassing 50 orders of magnitude). These were caused by the system either not finding the expected resonant peaks and/or (in the case of the F-Band system) interference due to outside sources. While both of these issues were minimized as much as possible they still occurred. 
+
 
 \begin{figure}[p]
  \centering 
